--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reminder",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "nodemon"
   },
@@ -12,6 +12,9 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
-    "nodemon": "^2.0.18"
+    "express-session": "^1.17.3",
+    "nodemon": "^2.0.18",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
