--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "nodemon": "^2.0.18",
     "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0"
   }
 }
